--- a/package.json
+++ b/package.json
@@ -3,11 +3,18 @@
   "version": "1.0.0",
   "description": "REST API for social media application",
   "main": "server.js",
+  "type": "commonjs",
   "scripts": {
     "start": "node server.js",
-    "dev": "node --watch server.js"
+    "dev": "node --watch server.js",
+    "db:generate": "prisma generate",
+    "db:migrate": "prisma migrate dev",
+    "db:studio": "prisma studio",
+    "db:format": "prisma format"
   },
   "dependencies": {
+    "@prisma/client": "^7.4.0",
+    "@prisma/adapter-pg": "^7.4.0",
     "dotenv": "^17.3.1",
     "express": "^4.18.2"
   },
@@ -17,5 +24,8 @@
     "nodejs"
   ],
   "author": "",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "prisma": "^7.4.0"
+  }
 }
