--- a/package.json
+++ b/package.json
@@ -13,10 +13,14 @@
     "db:format": "prisma format"
   },
   "dependencies": {
-    "@prisma/client": "^7.4.0",
     "@prisma/adapter-pg": "^7.4.0",
+    "@prisma/client": "^7.4.0",
+    "bcryptjs": "^3.0.3",
     "dotenv": "^17.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.3",
+    "passport": "^0.7.0",
+    "passport-jwt": "^4.0.1"
   },
   "keywords": [
     "express",
