--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,14 @@
-PORT=
-DATABASE_URL="postgresql://username:password@localhost:5432/social_media_db?schema=public"
-JWT_SECRET=
+# Server Configuration
+# Port on which the server will run (default: 3000)
+PORT=3000
+
+# Database Configuration
+# PostgreSQL connection string
+# Format: postgresql://username:password@localhost:5432/database_name?schema=public
+# Replace 'username', 'password', and 'social_media_db' with your actual values
+DATABASE_URL=postgresql://username:password@localhost:5432/social_media_db?schema=public
+
+# JWT Configuration
+# Secret key for JWT token signing and verification
+# Use a strong, random string in production (at least 32 characters)
+JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
