feat: Add profile photo upload and deletion feature
- Implement Cloudinary integration for image storage and optimization
- Add POST /users/me/photo endpoint for profile photo uploads
- Add DELETE /users/me/photo endpoint for profile photo deletion
- Include file validation (type, size, format) and security measures
- Update all user detail queries to include profile photo URL
- Add comprehensive error handling and Cloudinary cleanup

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,9 @@ DATABASE_URL=postgresql://username:password@localhost:5432/social_media_db?schem
 # Secret key for JWT token signing and verification
 # Use a strong, random string in production (at least 32 characters)
 JWT_SECRET=your-super-secret-jwt-key-change-this-in-production
+
+# Cloudinary Configuration
+# Get these from your Cloudinary dashboard at https://cloudinary.com/console
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
