--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
   "scripts": {
     "start": "node server.js",
     "dev": "node --watch server.js",
+    "test": "jest",
+    "test:watch": "jest --watch",
+    "test:coverage": "jest --coverage",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
@@ -35,6 +38,8 @@
   "author": "",
   "license": "MIT",
   "devDependencies": {
-    "prisma": "^7.4.0"
+    "jest": "^30.2.0",
+    "prisma": "^7.4.0",
+    "supertest": "^7.2.2"
   }
 }
