--- a/.env.example
+++ b/.env.example
@@ -8,6 +8,11 @@ PORT=3000
 # Replace 'username', 'password', and 'social_media_db' with your actual values
 DATABASE_URL=postgresql://username:password@localhost:5432/social_media_db?schema=public
 
+# Test Database Configuration
+# Separate database for running tests to avoid affecting development/production data
+# Should point to a different database than DATABASE_URL
+TEST_DATABASE_URL=postgresql://username:password@localhost:5432/social_media_test_db?schema=public
+
 # JWT Configuration
 # Secret key for JWT token signing and verification
 # Use a strong, random string in production (at least 32 characters)
